--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -54,6 +54,25 @@ p {
     margin: var(--margin-main);
 }
 
+figcaption {
+    margin-top: 5px;
+}
+
 form {
     margin: 75px;
+}
+
+h2 {
+    margin: var(--margin-main);
+    font-size: 20px;
+}
+
+a {
+    color: var(--heading-color);
+    text-decoration: none;
+    transition: 1s;
+}
+
+a:hover {
+    border-bottom: 1px solid var(--heading-color);
 }
